--- a/css/style.scss
+++ b/css/style.scss
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header {
     background: #222222;
-    padding: 18px 0;
+    padding: 18px 24px;
 
     &__wrapper {
         display: flex;
@@ -366,7 +366,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // Offer start
 .wrapper__offer {
-  padding: 65px 0 96px;
+  padding: 65px 15px 96px;
 
   .offer__inner {
     display: flex;
@@ -374,10 +374,8 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
 
     .for__element {
-      max-width: 360px;
-      width: 100%;
+      width: 30%;
       height: 260px;
-      margin-right: 30px;
       position: relative;
 
 
@@ -899,6 +897,19 @@ h1, h2, h3, h4, h5, h6 {
       }
     }
   }
+  // .breadcrumb__inner {
+  //   list-style: none;
+  //   background: none;
+
+  //   .breadcrumb__inner_item {
+  //     display: inline;
+  //     text-transform: uppercase;
+
+  //     .breadcrumb__inner_item_link {
+  //       text-transform: uppercase;
+  //     }
+  //   }
+  // }
 }
 // Breadcrumb end
 // Catalog fetured start
@@ -1593,4 +1604,138 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 // registration.html end
+
+// Media index.html 
+@media(max-width:1140px) {
+  .fetured__cards_inner {
+  
+    .fetured__card {
+  
+      &:nth-child(3n) {
+        margin-right: 30px;
+      }
+
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+    }
+  
+  }
+}
+
+@media (max-width:860px) {
+  .wrapper {
+    padding-left: 7px;
+    padding-right: 7px;
+  }
+
+  .intro {
+
+    .wrapper__intro {
+      background-size: 350px;
+      height: 338px;
+      background-position: 0 bottom;
+      .intro__text {
+  
+  
+        .intro__title {
+          font-weight: 900;
+          font-size: 44px;
+
+        }
+  
+        .intro__subtitle {
+          font-weight: 700;
+          font-size: 24px;
+          .intro__span {
+
+          }
+        }
+      }
+    }
+  }
+
+  .wrapper__offer {
+    padding: 65px 15px 96px;
+  
+    .offer__inner {
+  
+      .for__element {
+        height: 167px;
+      }
+
+      .for__element_long {
+        height: 116px;
+      }
+      }
+  
+  
+    }
+  
+
+}
+
+@media(max-width:768px) {
+  .benefits {
+  
+    .benefits__inner {
+
+      flex-direction: column;
+  
+      .benefits__item {
+
+        .benefits__item_pic {
+          margin-bottom: 28px;
+        }
+        .benefits__text {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-bottom: 48px;
+          .benefits__title {
+
+          }
+          .benefits__subtitle {
+
+          }
+        }
+      }
+    }
+  }
+
+  .author {
+    background: url(../img/bottom__bg.jpg) no-repeat;
+    background-size: cover;
+    .author__inner {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 97px 0 156px;
+  
+      .author__item {
+        .author__pic {
+        }
+        .author__quote {
+        }
+      }
+      .author__item_btn {
+        .author__btn_title {
+        }
+        .author__btn_subtitle {
+        }
+        .form {
+          
+          .email {
+          }
+  
+          .btn__subscribe {
+            }
+          }
+        }
+  
+      }
+  
+    }
+
+}
 
